# chatgpt-web

./: .all-contributorsrc  .env  .eslintrc.cjs  .gitignore  CHANGELOG.md  CNAME  Dockerfile  Procfile  README.md  docker-compose.yml  eslint.config.js  index.html  log_file.txt  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tsconfig.json  vite.config.js  vite.config.js.map  vite.config.ts
.github/: dependabot.yml
assets/: index-026a5ad5.js  index-0294dfed.css  index-0303fcf3.js  index-03752ed4.js  index-059b18a2.js  index-05c07f68.css  index-064dff43.js  index-06955cad.js  index-08276b9c.css  index-085575f3.js  index-087f3040.js  index-0Gf_nubR.js  index-0b81474c.js  index-0ba0ac10.css  index-0edf9631.js  index-0f52e32f.js  index-0f6f2b90.js  index-0f803df1.css  index-0fe1a81b.js  index-1118aadd.js  index-116baf87.js  index-1201e377.js  index-12602938.css  index-138a1782.js  index-194efab7.js  index-1bbf2445.js  index-1bd50bcd.js  index-1e42548c.js  index-1ed1abbf.js  index-1lupDMF2.css  index-2045cc55.css  index-209e7809.js  index-20a6df3d.js  index-213ee9e0.js  index-236b428b.js  index-28271295.js  index-288b179a.js  index-2aa14082.js  index-2c4a988a.js  index-2e5937a9.js  (+224 more)
electron/: index.html  main.js  package-lock.json  package.json  renderer.js
llama_api/: Dockerfile
mocked_api/: Dockerfile-mockapi  mock_api.py  models_response.json
src/: App.svelte  ChatSettingField.svelte  additional-svelte-typings.d.ts  app.css  app.scss  main.js  main.js.map  main.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
(+59 files in other folders)
